# ratatui-experiments

./: Cargo.toml  README.md
crates/counter/: Cargo.toml
crates/counter/src/: app.rs  error.rs  event.rs  main.rs  tui.rs  ui.rs  update.rs
crates/hello-world/: Cargo.toml
crates/hello-world/src/: main.rs
